Position functionality and pages work

--- a/CodeFirstApp_Runtime/CodeFirstAppService/CodeFirstAppService.csproj
+++ b/CodeFirstApp_Runtime/CodeFirstAppService/CodeFirstAppService.csproj
@@ -156,6 +156,7 @@
   <ItemGroup>
     <Compile Include="App_Start\Startup.MobileApp.cs" />
     <Compile Include="Controllers\CandidateController.cs" />
+    <Compile Include="Controllers\CandidatePositionController.cs" />
     <Compile Include="Controllers\PositionController.cs" />
     <Compile Include="Controllers\TodoItemController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
